clusters/talos-robbinsdale/apps/media/jellyfin/deployment-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-backup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin-backup
  template:
    metadata:
      labels:
        app: jellyfin-backup
    spec:
      hostname: jellyfin-robbinsdale
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          resources:
            limits:
              gpu.intel.com/i915: "1" # requesting 1 GPU
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - name: tv-volume
              mountPath: /media/tvshows
            - name: movies-volume
              mountPath: /media/movies
            - name: music-volume
              mountPath: /media/music
            - name: audiobooks-volume
              mountPath: /media/audiobooks                            
            - name: config-volume
              mountPath: /config
      volumes:
        - name: tv-volume
          persistentVolumeClaim:
            claimName: sonarr-tv
        - name: movies-volume
          persistentVolumeClaim:
            claimName: radarr-movies
        - name: audiobooks-volume
          persistentVolumeClaim:
            claimName: readarr-books
        - name: music-volume
          persistentVolumeClaim:
            claimName: lidarr-music
        - name: config-volume
          persistentVolumeClaim:
            claimName: jellyfin-config
